refactor: refactor stream api functions